2007-09-21  Roman Kennke  <roman.kennke@aicas.com>

	* java/awt/Font.java
	(hashCode): New field. Stores a cached hash code.
	(hashCode()): Re-implemented. Don't create new string here, instead
	make hashcode of name, style, size and transform. Cache hashcode.

2007-09-20  Roman Kennke  <roman.kennke@aicas.com>

	* gnu/java/awt/font/GNUGlyphVector.java
	(cleanOutline): New field, caches the untransformed outline.
	(getOutline()): No need to validate here. Already done in
	getOutline(float,float).
	(getOutline(float,float)): Cache untransformed outlines. Protect
	returned shape from modification by wrapping in ShapeWrapper
	object.
	* gnu/java/awt/font/OpenTypeFontPeer.java: New class. Implements
	ClasspathFontPeer for OpenType fonts.
	* gnu/java/awt/java2d/AbstractGraphics2D.java
	(DEFAULT_TEXT_AA): New constant/property for controlling
	default anti-aliasing for text.
	(GC_CACHE_SIZE): New constant for the size of the glyph vector
	cache.
	(shapeCache): Don't make shapeCache thread local. This wouldn't
	gain much, because the event dispatch thread is restarted quite
	often.
	(scanlineConverters): Don't make scanlineConverters thread local,
	but instead pool them into a list.
	(gvCache): New cache for glyph vectors.
	(searchTextKey): New static field, a shared key used for GV caching.
	(drawString): Cache glyph vectors.
	(getFontRenderContext): Protect the current transform from beeing
	changed.
	(clone): Check clip for null when cloning.
	(drawLine): Use shared shape cache. No need for calling a method here.
	(drawRect): Likewise. Add translation to rectangle coordinates.
	(fillRect): Use shared shape cache. No need for calling a method here.
	(drawRoundRect): Likewise.
	(fillRoundRect): Likewise.
	(drawOval): Likewise.
	(fillOval): Likewise.
	(drawArc): Likewise.
	(fillArc): Likewise.
	(drawPolyline): Likewise.
	(drawPolygon): Likewise.
	(fillPolygon): Likewise.
	(fillShape): Check property for default text AA. Set Y resolution.