@@ -1,5 +1,12 @@
 2007-09-21  Roman Kennke  <roman.kennke@aicas.com>
 
+	* java/awt/LightweightDispatcher.java
+	(dispatchEvent): Lock the component's tree to avoid threading
+	problems.
+	(redispatch): Only redispatch when component is showing.
+
+2007-09-21  Roman Kennke  <roman.kennke@aicas.com>
+
 	* java/awt/Font.java
 	(hashCode): New field. Stores a cached hash code.
 	(hashCode()): Re-implemented. Don't create new string here, instead
